# ipsync2

./: Cargo.toml
.github/workflows/: ci.yml
src/: config.rs  ip.rs  mail.rs  main.rs
