[package]
name = "ipsync"
version = "0.1.3"
edition = "2021"
description = "Synchronize IP addresses with email."
license = "MIT OR Apache-2.0"

[profile.release]
strip = true
opt-level = 'z'     # Optimize for size.
lto = true    
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
native-tls = "=0.2.12"
netif = "0.1.6"
lettre = "0.11"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.0"
libc = "0.2"
log = "0.4"
env_logger = "0.9"
